# aWsm

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  PATCH-README.md  README.md  error.txt  format.sh  install_deb.sh  install_mac.sh  patch-wasi-libc.sh  sections.ld
.github/workflows/: main.yaml  main.yml
applications/: .gitignore  Makefile
applications/armstrong-numbers/: main.c
applications/bank-account/: main.c
applications/binary-search/: main.c
applications/collatz-conjecture/: main.c
applications/darts/: main.c
applications/difference-of-squares/: main.c
applications/grains/: main.c
applications/hamming/: main.c
applications/leap/: main.c
applications/start/: main.c
applications/triangle/: main.c
applications/unreachable/: main.c
code_benches/: Makefile  dummy.c  dummy.cpp  example.mk  run.py
code_benches/_test/: test.c
code_benches/adpcm/: rawcaudio.c  small.pcm
code_benches/app_nn/: _a.c  arm_convolve_HWC_q7_fast.c  arm_fully_connected_q7_opt.c  arm_nnexamples_cifar10.c  arm_pool_q7_HWC.c  test.out  test2.out
doc/: .gitignore  Makefile  abi.md  design.md
example_code/: basic.c  binarytrees.c  binarytrees.wasm  control_bug.c  dummy.c  for_loops.c  function_pointers.c  knucleotide.c  libc_link.c  long_double.c  main.c  mandelbrot.c  mandelbrot.wasm  mutual_recursion.c  nbody.c  nested_loop.c  printing.c  weird.c
runtime/: .gitignore  64bit_nix_abi.c  Makefile  runtime.c  runtime.h  runtime_so.c
src/: PR.txt  llvm_externs.rs  main.rs  wasm.rs
tests/: code_benches.rs
(+663 files in other folders)
