[package]
name = "silverfish"
version = "0.1.0"
authors = ["Gregor Peach <gregorpeach@gmail.com>"]
edition = "2018"

[dependencies]
flexi_logger = "0.14.4"
llvm-sys = { version = "90.0.0", optional = true }
llvm-alt = { git = "https://github.com/Others/llvm-rs.git" }
log = "0.4.8"
structopt = "0.3.2"
wasmparser = "0.39.2"

[features]
cortex-m-attrs = ['llvm-sys']

[profile.release]
debug = true
