[package]
name = "awsm"
version = "0.1.0"
authors = ["Gregor Peach <gregorpeach@gmail.com>"]
edition = "2018"

[dependencies]
flexi_logger = "0.17.1"
llvm-alt = { git = "https://github.com/gwsystems/llvm-rs", branch = "sfbase"}
log = "0.4.8"
structopt = "0.3.2"
wasmparser = "0.39.2"

[profile.release]
debug = true
