[package]
name = "awsm"
version = "0.1.0"
authors = ["Gregor Peach <gregorpeach@gmail.com>"]
edition = "2018"

[dependencies]
flexi_logger = "0.22.3"
llvm-alt = { git = "https://github.com/gwsystems/llvm-rs", branch = "sfbase"}
log = "0.4.14"
structopt = "0.3.26"
wasmparser = "0.46.0"

[profile.release]
debug = true
